--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - A Pen by Joy Dey</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css'>
 
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-     <header>
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<header>
   <div class="container-fluid">
     <div class="card border-0 shadow-sm">
       <div class="card-body d-flex justify-content-between align-items-center">
@@ -35,11 +35,8 @@
     </div>
   </div>
 </main>
-        
-    </body>
-        <script src="" async defer>
-        
-        </script>
-        <script src="main.js">
-        </script>
+<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.25.0/apexcharts.min.js'></script><script  src="./script.js"></script>
+
+</body>
 </html>
